@@ -19,6 +19,7 @@ Cacti CHANGELOG
 -issue#5696: When inputting Chinese to search for graphics, garbled characters appear.
 -issue#5701: Bad URL formating in the templates_import.php preview mode
 -issue#5720: mysql.time_zone_name table DB check isn't being made on Remote Poller installation
+-issue#5723: Remote Poller installation is finished successfully but no "finish" button
 -feature#5692: Add a "device enabled/disabled" indicator next to the graphs
 -feature#5716: Add Aruba Clearpass template
 
